# lego_app

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE.md  MIGRATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  README_QT.md  api.json  builder.json  pubspec.yaml
.github/workflows/: ios-build.yml  qt-build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
db/: permissions.sql  schema.sql
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: api.dart  auth_notifier.dart  auth_page.dart  main.dart  navigation_page.dart  router.dart  settings.dart  util.dart
lib/api/: api_client.dart
lib/api/models/: color.dart  lego_set.dart  main.dart  set_collection_item.dart  set_collection_response.dart
lib/api/services/: brickset_api.dart  lego_api.dart  swagger_api.dart  users_api.dart
lib/api/services/rebrickable/: common.dart  (+3 more)
lib/components/: confirm_action_dialog.dart  part_card.dart  set_card.dart
lib/db/: db.dart
lib/db/models/: lego_set.dart  set.dart  set_part.dart
lib/providers/: db_providers.dart  db_providers.g.dart  rebrickable_providers.dart  rebrickable_providers.g.dart  settings.dart  settings.g.dart
lib/tabs/: home.dart  home_page.dart  settings.dart  settings_page.dart
lib/tabs/dashboard/: dashboard_page.dart
lib/tabs/home/: home_page.dart  set_card.dart
lib/tabs/sets/: sets_page.dart
lib/tabs/settings/: login_modal.dart  settings_page.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
qml/: main.qml  qml.qrc
qml/components/: SetCard.qml
qml/pages/: AuthPage.qml  DashboardPage.qml  SetsPage.qml  SettingsPage.qml
src/: authmanager.cpp  authmanager.h  legosetmodel.cpp  legosetmodel.h  main.cpp  supabaseclient.cpp  supabaseclient.h
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
